changed some styling to make the menu button for opening the drawer tab not take vertical space, but but where the page shifts needs to be fixed

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -12,3 +12,7 @@
   width: 800;
 }
 
+
+.pageBox {
+  display: flex;
+}
