--- a/src/navigationPanel/navigationPanel.module.css
+++ b/src/navigationPanel/navigationPanel.module.css
@@ -13,4 +13,5 @@
   position: absolute;
   left: 0;
   top: 0;
+  width: 90px;
 }
